# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/guild/getall": {
+        "/guild/": {
             "get": {
                 "produces": [
                     "application/json"
@@ -42,9 +42,7 @@
                         }
                     }
                 }
-            }
-        },
-        "/guild/insert": {
+            },
             "post": {
                 "consumes": [
                     "application/json"
@@ -72,6 +70,53 @@
                         "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/custom.Created"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/custom.BadRequestError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/custom.NotFoundError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/custom.InternalServerError"
+                        }
+                    }
+                }
+            }
+        },
+        "/guild/{name}": {
+            "get": {
+                "description": "Get all pg for user",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Guild"
+                ],
+                "summary": "Get all pg for user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "name",
+                        "name": "name",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/custom.Success"
                         }
                     },
                     "400": {
@@ -198,6 +243,18 @@
                 }
             }
         },
+        "custom.Success": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 200
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Personaggio": {
             "type": "object",
             "required": [
@@ -209,6 +266,9 @@
             "properties": {
                 "class": {
                     "type": "string"
+                },
+                "class_id": {
+                    "type": "integer"
                 },
                 "id": {
                     "type": "integer"
